# merkleized-metadata-ts

./: CHANGELOG.md  README.md
examples/node/: README.md  package-lock.json  package.json  tsconfig.json
examples/node/src/: index.js  index.ts
examples/web/: README.md  package-lock.json  package.json  tsconfig.json
examples/web/public/: globals.css  index.html
examples/web/src/: App.tsx  defaults.ts
merkleized-metadata/: README.md  package-lock.json  package.json  tsconfig.json
merkleized-metadata-example/: webpack.config.ts
merkleized-metadata-example/public/: globals.css
merkleized-metadata-example/src/: App.tsx  entrypoint.tsx
merkleized-metadata-sys/: .gitignore  Cargo.toml  README.md
merkleized-metadata-sys/inline_wasm/: Cargo.toml  README.md
merkleized-metadata-sys/inline_wasm/src/: main.rs
merkleized-metadata-sys/src/: lib.rs
merkleized-metadata/src/: index.ts
