[package]
name = "merkleized-metadata-sys"
version = "0.0.7"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A raw TS wrapper around the merkleized-metadata crate"
keywords = ["parity", "polkadot", "metadata", "hashing"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "=0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
merkleized-metadata = "0.1.0"
frame-metadata = "16.0.0"
hex = "0.4.3"
parity-scale-codec = "3.6.12"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
