[package]
name = "merkleized-metadata-sys"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A raw TS wrapper around the Rust merkleized-metadata crate"
keywords = ["parity", "polkadot", "metadata", "hashing"]
repository = "https://github.com/jsdw/merkleized-metadata-ts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "=0.2.92"
merkleized-metadata = "0.1.0"
frame-metadata = "16.0.0"
hex = "0.4.3"
parity-scale-codec = { version = "3.6.12", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
